--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           pnpm i --no-frozen-lockfile
           npm run build
           shopt -s extglob
-          rm -rf !(dist)
+          rm -rf !(docs)
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
