--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@notes/theme": "workspace:^",
     "@vueuse/core": "^10.8.0",
     "@vueuse/integrations": "^10.8.0",
+    "dayjs": "^1.11.10",
     "element-plus": "^2.5.6",
     "mark.js": "^8.11.1",
     "minisearch": "^6.3.0",
